# d2alchemy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sqlalchemy_erd.d2  sqlalchemy_parser.py
ast-v2/: find_sqlalchemy_models.py  sqlalchemy_schema.d2
test/: example_models.py
